Fix content spacing issue

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -8,7 +8,7 @@
 
 .container {
   max-width: 900px;
-  margin: 30px auto;
+  margin: $gutter-bottom auto;
   padding-right: $gutter-left;
   padding-bottom: $gutter-bottom;
   padding-top: $gutter-bottom;
